--- a/Training tasks/6.1 Font Properties/font-family.html
+++ b/Training tasks/6.1 Font Properties/font-family.html
@@ -22,7 +22,7 @@
     }
 
     #cursive {
-      font-family: cursive;
+      font-family: cursive, serif;
     }
 
     #monospace {
@@ -30,9 +30,12 @@
     }
 
     #fantasy {
-      font-family: fantasy;
+      font-family: fantasy, serif;
     }
   </style>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap" rel="stylesheet">
 </head>
 
 <body>
