final editing position in flag)

--- a/Task to train/7.3 CSS Flag Project/index.html
+++ b/Task to train/7.3 CSS Flag Project/index.html
@@ -9,6 +9,7 @@
       background-color: #ce1126;
       height:600px;
       width: 900px;
+      position: relative;
     }
     .flag>p{
       color: white;
