complete task about flex direction

--- a/Task to train/9.1 Flex Direction/index.html
+++ b/Task to train/9.1 Flex Direction/index.html
@@ -13,7 +13,14 @@
     .container {
       color: white;
       border: 5px solid gold;
-      display: flex;
+      display: inline-flex;
+      flex-direction: column;
+      flex-basis: 100px;
+    }
+    .container>div{
+      /* display: inline-flex; */
+      width: 50px;
+      height: 100px;
     }
 
     /*
