correcting grid project

--- a/Task to train/10.3 Mondrian Project/index.html
+++ b/Task to train/10.3 Mondrian Project/index.html
@@ -6,13 +6,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mondrian Project</title>
   <style>
+    body{
+      display: flex;
+      height: 100vh;
+      justify-content: center;
+      align-items: center;
+      margin: 0;
+      padding: 0;
+    }
     .container{
       display:grid;
       width: 748px;
       height: 748px;
       gap: 9px;
       background-color: black;
-      grid-template-rows: 414px 130px 155px 20px;
+      grid-template-rows: 414px 130px 155px 22px;
       grid-template-columns: 320px 198px 153px 50px;
     }
 
