--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 <body>
   <h1>Мої фронтенд-проєкти</h1>
   <ul>
-    <li><a href="Frontend/8.4%20Web%20Design%20Agency%20Project/index.html">8.4 Web Design Agency Project</a></li>
-    <li><a href="Frontend/10.3%20Mondrian%20Project/index.html">10.3 Mondrian Project</a></li>
-    <li><a href="Frontend/11.3%20TinDog%20Project/index.html">11.3 TinDog Project</a></li>
+    <li><a href="Frontend/8.4%20Web%20Design%20Agency%20Project/index.html">8.4 Web Design Agency Project(css)</a></li>
+    <li><a href="Frontend/10.3%20Mondrian%20Project/index.html">10.3 Mondrian Project(Used grid)</a></li>
+    <li><a href="Frontend/11.3%20TinDog%20Project/index.html">Site TinDog Project(Only design part)</a></li>
     <li><a href="Frontend/Dicee%20Challenge/index.html">Dicee Challenge</a></li>
     <li><a href="Frontend/Drum%20Kit/index.html">Drum Kit</a></li>
     <li><a href="Frontend/Simon%20Game/index.html">Simon Game</a></li>
